# mcp-course

./: .env  .gitignore  COURSE_RESOURCES.md  pyproject.toml  tool_calling.ipynb
.github/: run_price_graph_gemini.py  test.py
.github/workflows/: ci.yml
binance_mcp_reference_implementation/: binance_mcp.py
langgraph/: price_graph.py
