[project]
name = "mcp-course"
version = "0.1.0"
description = "MCP Course projects"
requires-python = ">=3.10"
dependencies = [
    # From binance-mcp
    "mcp[cli]==1.6.0",
    "requests==2.32.3", # Also for llm-tool-use
    # From llm-tool-use
    "python-dotenv==1.1.0",
    "google-generativeai==0.8.5",
    # Jupyter support
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]

[tool.ruff]
line-length = 79 
